[project]
name = "volgaautoprom-order-processing"
version = "0.1.0"
description = ""
authors = [
    {name = "propatcher"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "pymongo (>=4.16.0,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
